Sort apps before install in Publish-BcContainerApp
Add PrevousApps, AppSourceCopMandatoryAffixes and AppSourceCopSupportedCountries to Run-AlPipeline
Move decision on whether or not to rebuild image from New-BcContainer to New-BcImage and always call
Add parameter -skipIfImageAlreadyExists to New-BcImage
Issue #1343 Publish-BcContainerApp with ShowMyCode fails if replaceDependencies is not Set

1.0.7
Issue #1299 wait for symbol file to be available in container
Add parameter AssignPremiumPlan to Run-AlPipeline
Support reading defaultNewContainerParameters from config file
Add tenant to Run-AlPipeline to allow running the pipeline in a tenant
Add ability to override functions
Addiional fixes to Run-AlPipeline
Issue #1313 -includeAL fails when using a hostHelperFolder, which is different from the containerhelperfolder
Issue #1316 New-BcContainerWizard converts license file url to lowercase
Add support for JUnit to Run-Tests
Add parameter testResultsFormat to Run-AlPipeline
Do not fail on missing image in New-BcImage (only warn)
Add properties to JUnit output

1.0.6
Add 3 new values for Select: Current, NextMinor and NextMajor for selecting artifacts. SasToken needs to be provided for NextMajor and NextMinor
Publish-BcContainerApp now supports .zip files. All .app files in the .zip file are published in alphabetic order
Run-AlPipeline to add sequence numbers (dependencies) to apps in artifacts if more than one app is added

1.0.5
Added PREVIEW function Run-AlPipeline
Issue #1252 do not return artifact url for artifacts without platform (unless -doNotCheckPlatform is specified)
Issue #1263 new-bccontainertenant freezes if -updatehosts isn't specified
Add switch -includePerformanceToolkit to Import-TestToolkitToBcContainer and New-BcContainer
Support for -includePerformanceToolkit in New-BcContainerWizard
Support for insider builds and sasToken in New-BcContainerWizard
Add NAV to New-BcContainerWizard
Add AL Language Extension version selection to New-BcContainerWizard